<resources>
    <string name="app_name">hi-account</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hi_account_forget_password">忘记密码</string>
    <string name="hi_account_login">登录</string>
    <string name="hi_account_register">注册</string>
    <string name="hi_account_input_username">用户名</string>
    <string name="hi_account_input_pwd">密码</string>
    <string name="hi_account_login_with_other_methods">可以使用以下方式登录</string>
    <string name="hi_account_please_input_phone_number">请输入手机号</string>
    <string name="hi_account_phone_number">手机号</string>
    <string name="hi_account_approve_hisense_account">"同意海信账户的"</string>
    <string name="hi_account_user_agreement">"用户协议"</string>
    <string name="hi_account_wechat_register_app_failed">"注册应用失败"</string>
    <string name="hi_account_wechat_share_success">"分享成功"</string>
    <string name="hi_account_wechat_share_fail">"分享失败"</string>


    <string name="hi_account_user_portrait">"头像"</string>
    <string name="hi_account_user_nick_name">"用户名"</string>
    <string name="hi_account_user_sex">"性别"</string>
    <string name="hi_account_user_birthday">出生日期</string>
    <string name="hi_account_user_email">"电子邮箱"</string>
    <string name="hi_account_modify_pwd">"修改登录密码"</string>
    <string name="hi_account_logout">"退出登录"</string>
    <string name="hi_account_gender">"性别"</string>
    <string name="hi_account_male">"男"</string>
    <string name="hi_account_female">"女"</string>

    <string name="hi_account_bir_day">"日"</string>
    <string name="hi_account_bir_month">"月"</string>
    <string name="hi_account_bir_year">"年"</string>

    <string name="hi_account_nick_name_policy">您的昵称只能包含汉字、字母、数字哦</string>

</resources>
