<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8edf0"
    android:orientation="vertical">
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hi_account_input_username"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:singleLine="true"
        android:textSize="16dp"
        android:background="@null"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="#334a4a4a"
        app:layout_constraintTop_toBottomOf="@id/username" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="80dp"
        android:hint="@string/hi_account_input_pwd"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:background="@null"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/line1"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="#334a4a4a"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <ImageButton
        android:id="@+id/btn_pwd_display"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_account_login_pwd_display"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line1" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="90dp"
        android:focusable="false"
        android:includeFontPadding="false"
        android:background="@drawable/selector_btn"
        android:text="@string/hi_account_login"
        android:textColor="#ffffff"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="16dp"
        android:text="@string/hi_account_forget_password"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/baseColorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/register_now"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:gravity="center"
        android:textSize="16dp"
        android:singleLine="true"
        android:text="@string/hi_account_register"
        android:textColor="@color/baseColorAccent"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tip_oauth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/hi_account_login_with_other_methods"
        android:textColor="#a9a9a9"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.88" />

    <ImageView
        android:id="@+id/img_wechat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:focusable="false"
        android:src="@mipmap/ic_wechat"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_oauth" />

    <ImageView
        android:id="@+id/img_sina_blog"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:focusable="false"
        android:src="@mipmap/ic_weibo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/img_wechat"
        app:layout_constraintTop_toBottomOf="@+id/tip_oauth" />

</android.support.constraint.ConstraintLayout>