<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8edf0"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#334a4a4a" />

    <TextView
        android:id="@+id/tx_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/hi_account_please_input_phone_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pad_text1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.84"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#334a4a4a" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hi_account_phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="text|phone"
                    android:singleLine="true"
                    android:textColorHint="#a9a9a9"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/img_check_name"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_account_register_checkbox_checked" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#334a4a4a" />
        </LinearLayout>

        <TextView
            android:id="@+id/pad_text2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.92">

            <ImageButton
                android:id="@+id/btn_contract"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_account_register_checkbox_checked" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/agreement"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/hi_account_approve_hisense_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=" " />

            <TextView
                android:id="@+id/tx_privacy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/hi_account_user_agreement"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.95"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:visibility="invisible" />


    <Button
        android:id="@+id/btn_next"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/selector_btn"
        android:focusable="false"
        android:includeFontPadding="false"
        android:text="@string/hi_account_register"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:visibility="invisible" />

</LinearLayout>